Fix: 즐겨찾기 메서드 추가